Package Name changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Ekhanei.com Demo</string>
+    <string name="app_name">Recipe Den</string>
     <string name="search_hint">What do you have to cook?</string>
     <string name="no_connectivity">No Internet connectivity!</string>
     <string name="error">Something went wrong!</string>
